# oop-mai-lab4

./: README.md
lab4/: CMakeLists.txt
lab4/include/: array.hpp  array.tpp  figure.hpp  figure.tpp  point.hpp  rectangle.hpp  rectangle.tpp  rhombus.hpp  rhombus.tpp  trapezoid.hpp  trapezoid.tpp
lab4/src/: main.cpp
lab4/tests/: test_main.cpp
